--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,13 @@
 # Auto detect text files and perform LF normalization
+* text eol=crlf
 * text=auto
 
 # Custom for Visual Studio
 *.cs     diff=csharp
 
 # Standard to msysgit
+*.doc  diff=astextplain
+*.DOC  diff=astextplain
 *.doc	 diff=astextplain
 *.DOC	 diff=astextplain
 *.docx diff=astextplain
@@ -12,6 +15,9 @@
 *.dot  diff=astextplain
 *.DOT  diff=astextplain
 *.pdf  diff=astextplain
+*.PDF  diff=astextplain
+*.rtf  diff=astextplain
+*.RTF  diff=astextplain
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
