--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keybindings-manager",
   "version": "0.0.0",
 
-  "main": "./lib/keybindings-manager",
+  "main": "./lib/main",
 
   "engines": { "atom": ">=1.0.0 <2.0.0" },
   "dependencies": { }
