--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,11 @@
-# Auto detect text files and perform LF normalization
-* text eol=crlf
-* text=auto
-
-# Custom for Visual Studio
-*.cs     diff=csharp
+# Auto detect text files and perform CRLF normalization
+*      text eol=crlf
 
 # Standard to msysgit
 *.doc  diff=astextplain
 *.DOC  diff=astextplain
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
+*.doc  diff=astextplain
+*.DOC  diff=astextplain
 *.docx diff=astextplain
 *.DOCX diff=astextplain
 *.dot  diff=astextplain
@@ -18,6 +14,6 @@
 *.PDF  diff=astextplain
 *.rtf  diff=astextplain
 *.RTF  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+*.PDF  diff=astextplain
+*.rtf  diff=astextplain
+*.RTF  diff=astextplain
